<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".actividades.CursosActivity">

    <!-- PADRE -->
    <LinearLayout
        android:id="@+id/linealcursos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linealbusqueda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorLightGray">
            <TextView
                android:id="@+id/text_cursos_fabricante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tit_bbdd_fabricante"
                android:textSize="14sp"
                />
            <Spinner
                android:id="@+id/action_bar_spinner_fabricante"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:scrollbars="vertical"
            />
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite">
            <TextView
                android:id="@+id/text_cursos_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tit_bbdd_area"
                android:textSize="14sp"
                />
            <Spinner
                android:id="@+id/action_bar_spinner_area"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:scrollbars="vertical"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorLightGray">
            <TextView
                android:id="@+id/text_cursos_categoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tit_bbdd_categoria"
                android:textSize="14sp"
                />
            <Spinner
                android:id="@+id/action_bar_spinner_categoria"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:scrollbars="vertical"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite">
            <TextView
                android:id="@+id/text_cursos_subcategoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tit_bbdd_subcategoria"
                android:textSize="14sp"
                />
            <Spinner
                android:id="@+id/action_bar_spinner_subcategoria"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:scrollbars="vertical" />
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorLightGray">
            <TextView
                android:id="@+id/text_cursos_modalidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tit_bbdd_modalidad"
                android:textSize="14sp"
                />
            <Spinner
                android:id="@+id/action_bar_spinner_modalidad"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:scrollbars="vertical"
                android:visibility="visible"/>

        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:orientation="vertical">
            <android.support.constraint.ConstraintLayout
                android:id="@+id/login_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="0dp"
                android:background="@color/colorWhite">

                <android.support.design.widget.TextInputLayout
                android:id="@+id/curso_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/in_curso_nombre"
                    android:layout_width="282dp"
                    android:layout_height="wrap_content"
                    android:key="Texto de búsqueda"
                    android:summary="This is an Edit Text"
                    android:title="Edit Text"
                    android:hint="Nombre" />
            </android.support.design.widget.TextInputLayout>

             <Button
                    android:id="@+id/button_buscar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/text_buttom_buscar"
                    app:layout_constraintEnd_toEndOf="@+id/curso_nombre"
                    app:layout_goneMarginLeft="200dp"
                    app:layout_goneMarginRight="200dp" />
            </android.support.constraint.ConstraintLayout>
        </FrameLayout>
    </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <android.support.v4.view.ViewPager
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="1000dp"
                tools:context=".actividades.CursosActivity"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>